--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "url": "git+https://github.com/cag-group/js-good-examples.git"
   },
   "author": "CAG",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "immutable": "^3.8.1"
+  }
 }
